 First installation
------------------

	* Download collect.db
	* Download and install Collect.apk
	* Start Collect
	* Choose the downloaded collect.db file in the file chooser


Install an update
-----------------

    * Stop Collect if it's running
    * Clear data (this will removed any previously collected data)
    * Download and install Collect.apk
    * Start Collect
    * Choose your collect.db file in the file chooser


Changes
-------

2014-07-11

    * Supported survey design format exported in Collect Server
    * Uniqueness or record keys are validated
    * Fixed bug where record list wasn't properly updated when record key attribute changed

2014-07-04

    * This version is required to run surveys defined with Collect 3.1.x

2014-06-27

    * Current SRS for coordinate wasn't selected in spinner.

2014-06-13b

    * Stopped transforming coordinates when spatial reference system changes
    * Defaulted time picker to current time, if time is unspecified

2014-06-13

    * Split coordinate attribute into separate fields
    * Added support for selecting and transforming between spatial reference systems
    * Implemented distance check
    * Put hint on date and time fields

2014-06-10

    * Enabled gray overlay for irrelevant fields in all Android versions
    * Added support for boolean attributes

2014-06-06b

    * Notified user with a Toast message on validation error, if user navigated away from attribute

2014-06-06

    * Fixed bug where device in different language then English tried to display validation error
    * Increased padding under title of node description fragments, to fit eventual validation error messages

2014-06-05

    * Handled case where invalid database file was selected