@@ -23,4 +23,16 @@
 
     <string name="hint_date_pattern">dd MMMM yyyy</string>
     <string name="hint_time_pattern">hh:mm</string>
+
+    <string name="settings_title_crewId">Crew ID</string>
+
+    <string name="settings_title_darkTheme">Collect Mobile theme</string>
+    <string name="settings_switchTextOn_darkTheme">Dark</string>
+    <string name="settings_switchTextOff_darkTheme">Light</string>
+    <string name="settings_summaryOn_darkTheme">Collect Light uses the dark theme.</string>
+    <string name="settings_summaryOff_darkTheme">Collect Mobile uses the light theme.</string>
+
+    <string name="settings_title_showKeyboard">Automatically show keyboard</string>
+    <string name="settings_summary_showKeyboard">Determines if soft keyboard should automatically be shown when accessing an attribute.</string>
+
 </resources>
