@@ -1,16 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
+    <!--<EditTextPreference-->
+            <!--android:title="Collect Server URL"-->
+            <!--android:key="serverUrl"-->
+            <!--android:summary="Please provide the Collect Server URL"/>-->
+
     <EditTextPreference
-            android:title="Collect Server URL"
-            android:key="serverUrl"
-            android:summary="Please provide the Collect Server URL"/>
+            android:title="@string/settings_title_crewId"
+            android:key="crewId"/>
     <SwitchPreference
-            android:title="Collect Mobile theme"
+            android:title="@string/settings_title_darkTheme"
             android:defaultValue="true"
-            android:switchTextOn="Dark"
-            android:switchTextOff="Light"
-            android:summaryOn="Collect Mobile uses the dark theme."
-            android:summaryOff="Collect Mobile uses the light theme."
+            android:switchTextOn="@string/settings_switchTextOn_darkTheme"
+            android:switchTextOff="@string/settings_switchTextOff_darkTheme"
+            android:summaryOn="@string/settings_summaryOn_darkTheme"
+            android:summaryOff="@string/settings_summaryOff_darkTheme"
             android:key="darkTheme"
             />
     <CheckBoxPreference
